tests/fails/row_assignment.mat
vector v[5]
matrix m[4, 5]

m[2] = v